PROJECT(multithread)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
#AUX_SOURCE_DIRECTORY(src DIR_SRCS)
ADD_EXECUTABLE(alarm_demo src/alarm_cond.cpp)
ADD_EXECUTABLE(once src/once.cpp)
ADD_EXECUTABLE(cancel src/cancel.cpp)
ADD_EXECUTABLE(cancel_disable src/cancel_disable.cpp)
TARGET_LINK_LIBRARIES(alarm_demo pthread)
TARGET_LINK_LIBRARIES(once pthread)
TARGET_LINK_LIBRARIES(cancel pthread)
TARGET_LINK_LIBRARIES(cancel_disable pthread)
