PROJECT(multithread)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
#AUX_SOURCE_DIRECTORY(src DIR_SRCS)
INCLUDE_DIRECTORIES("include")
ADD_EXECUTABLE(alarm_demo src/alarm_cond.cpp)
ADD_EXECUTABLE(once src/once.cpp)
ADD_EXECUTABLE(cancel src/cancel.cpp)
ADD_EXECUTABLE(cancel_disable src/cancel_disable.cpp)
ADD_EXECUTABLE(cancel_async src/cancel_async.cpp)
ADD_EXECUTABLE(cancel_cleanup src/cancel_cleanup.cpp)
ADD_EXECUTABLE(cancel_subcontract src/cancel_subcontract.cpp)
ADD_EXECUTABLE(tsd_once src/tsd_once.cpp)
ADD_EXECUTABLE(tsd_destructor src/tsd_destructor.cpp)
ADD_EXECUTABLE(sched_attr src/sched_attr.cpp)
ADD_EXECUTABLE(sched_thread src/sched_thread.cpp)
ADD_EXECUTABLE(barrier_main src/barrier_main.cpp src/barrier.cpp)
TARGET_LINK_LIBRARIES(alarm_demo pthread)
TARGET_LINK_LIBRARIES(once pthread)
TARGET_LINK_LIBRARIES(cancel pthread)
TARGET_LINK_LIBRARIES(cancel_disable pthread)
TARGET_LINK_LIBRARIES(cancel_async pthread)
TARGET_LINK_LIBRARIES(cancel_cleanup pthread)
TARGET_LINK_LIBRARIES(cancel_subcontract pthread)
TARGET_LINK_LIBRARIES(tsd_once pthread)
TARGET_LINK_LIBRARIES(tsd_destructor pthread)
TARGET_LINK_LIBRARIES(sched_attr pthread)
TARGET_LINK_LIBRARIES(sched_thread pthread)
TARGET_LINK_LIBRARIES(barrier_main pthread)
